feat: Implement a complete UI redesign with new styling and introduce voice command functionality.

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
     <!-- Scripts -->
     <script src="js/data.js"></script>
+    <script src="js/voice-command.js"></script>
     <script src="js/app.js"></script>
 
     <!-- Service Worker -->
