feat: Implement voice command functionality with speech recognition, intent parsing, context management, and associated UI/UX elements, establishing core application structure and documentation.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <link rel="manifest" href="manifest.json" />
     <title>Box Audit - Speed Entry</title>
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Inline style overrides or specific component styles can go here if needed, but keeping clean for now -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <script src="js/audio-feedback.js"></script>
     <div class="header">
       <div style="display: flex; align-items: center; gap: 1rem">
         <div class="current-box-display" id="currentBoxDisplay">
