--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/data.js"></script>
-    <script src="js/voice-command.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/data.js?v=4"></script>
+    <script src="js/voice-command.js?v=4"></script>
+    <script src="js/app.js?v=4"></script>
 
     <!-- Service Worker -->
     <script>
